# NERSimString

./: README.md
src/originalSimString/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure
src/originalSimString/frontend/: Makefile.am  Makefile.in  createDictionaryBash  prueba.txt  simstring
src/originalSimString/frontend/.deps/.svn/: all-wcprops  entries
src/originalSimString/frontend/.svn/: all-wcprops  entries
src/originalSimString/frontend/.svn/text-base/: Makefile.svn-base  createDictionaryBash~.svn-base  main.cpp.svn-base  main.o.svn-base  makeSearchBash~.svn-base  optparse.h.svn-base  prueba.txt~.svn-base  simstringbash.svn-base
src/originalSimString/include/: Makefile  Makefile.am  Makefile.in
src/originalSimString/include/.svn/: all-wcprops  entries
src/originalSimString/include/simstring/.svn/: all-wcprops  entries
src/originalSimString/sample/: Makefile  Makefile.in  sample.db.16.cdb  sample_unicode
src/originalSimString/sample/.deps/: sample_unicode.Po
src/originalSimString/sample/.deps/.svn/: all-wcprops  entries
src/originalSimString/sample/.svn/: all-wcprops  entries
src/originalSimString/sample/.svn/text-base/: sample.db.21.cdb.svn-base  sample.db.svn-base  sample.svn-base  sample_unicode.o.svn-base
src/originalSimString/simString/.svn/: all-wcprops  entries
src/originalSimString/swig/.svn/: all-wcprops  entries
src/originalSimString/swig/.svn/text-base/: Makefile.svn-base  (+1 more)
src/originalSimString/swig/python/: simstring.py
src/originalSimString/win32/.svn/: all-wcprops  entries
(+97 files in other folders)
