# $Id: Makefile.am 108 2010-03-07 08:39:07Z naoaki $

SUBDIRS = include frontend sample swig

docdir = $(prefix)/share/doc/@PACKAGE@
doc_DATA = README INSTALL COPYING AUTHORS ChangeLog

EXTRA_DIST = \
	autogen.sh \
	win32/stdint.h \
	simstring.sln

#AUTOMAKE_OPTIONS = foreign
#ACLOCAL_AMFLAGS = -I m4
